[gd_scene load_steps=8 format=2]

[ext_resource path="res://shared/attacks/IceFireAttack/IceFireAttack.gd" type="Script" id=1]
[ext_resource path="res://shared/attacks/IceFireAttack/iceFireBall.png" type="Texture" id=2]
[ext_resource path="res://shared/ParticleImages/opacityGradientCircle.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 50.9902

[sub_resource type="Gradient" id=2]

offsets = PoolRealArray( 0.0026455, 0.724868, 0.94709 )
colors = PoolColorArray( 0.154465, 0.330105, 0.746094, 1, 0.807506, 0.871094, 0.244995, 1, 0.765625, 0.104675, 0.104675, 1 )

[sub_resource type="GradientTexture" id=3]

flags = 4
gradient = SubResource( 2 )
width = 2048

[sub_resource type="ParticlesMaterial" id=4]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 3.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
color_ramp = SubResource( 3 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color" ]

[node name="IceFireAttack" type="Area2D"]

input_pickable = false
gravity_vec = Vector2( 20, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 8
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Audio Bus", "Collision", "Transform", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="IceFireBall" type="Sprite" parent="." index="1"]

scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Animation", "Offset", "Transform", "Visibility" ]

[node name="Particles2D" type="Particles2D" parent="." index="2"]

position = Vector2( 50, 0 )
rotation = 3.14159
scale = Vector2( 0.75, 0.75 )
emitting = false
amount = 16
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -50, -225, 400, 500 )
local_coords = true
draw_order = 0
process_material = SubResource( 4 )
texture = ExtResource( 3 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform" ]

[node name="Tween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[connection signal="body_entered" from="." to="." method="_on_IceFireAttack_body_entered"]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]


